// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the Sidebar component and strongBalance, weakBalance are NOT of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 4px;
  background-color: #201d2a;
  border-radius: 6px;
  box-sizing: border-box;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #c75a5a;
  font-weight: 500;
}

.c24:before {
  content: '';
  display: block;
  width: 12px;
  height: 12px;
  background-color: currentColor;
  border-radius: 50%;
}

.c18 {
  display: none;
  padding: 12px 24px;
  position: absolute;
  bottom: -48px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  color: #e1dfeb;
  font-size: 14px;
  font-family: 'Poppins',sans-serif;
  z-index: 1;
}

.c16 {
  position: relative;
}

.c16:hover .c17 {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 44px;
  width: 44px;
  background-color: #1a1823;
  border: 1px solid #302E3D;
  border-radius: 8px;
  color: #8d89a3;
  cursor: pointer;
}

.c5 svg {
  width: 20px;
  height: 20px;
}

.c5:hover {
  background-color: #252130;
}

.c5:active {
  background-color: #1b1924;
}

.c3 {
  display: grid;
  grid-template-columns: 44px 72px 44px;
  grid-template-rows: auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 32px 60px;
  height: 200px;
  padding: 24px 48px;
  background-color: #1a1823;
  border-radius: 4px;
}

.c4 {
  height: 72px;
  width: 72px;
  border-radius: 12px;
  border: 3px solid #302E3D;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  grid-column: 1/4;
}

.c6 span {
  font-size: 16px;
  font-weight: 500;
  color: #9895a6;
}

.c21 {
  width: 170px;
  height: 50px;
  background-color: #e1dfeb;
  border: none;
  border-radius: 8px;
  color: #1a1823;
  font-weight: 600;
  font-size: 14px;
}

.c21:hover {
  background-color: #fff;
}

.c21:active {
  background-color: #9895a6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 14px;
  padding: 24px 40px;
  border-bottom: 1px solid #302E3D;
}

.c7 strong {
  display: block;
  margin-bottom: 10px;
  font-weight: 400;
  color: #9895a6;
}

.c9 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 400;
}

.c9 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c15 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 700;
}

.c15 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  position: relative;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  border: none;
  font-size: 20px;
  font-weight: 500;
  color: #5d5b70;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  background-color: #8d89a3;
  color: #1a1823;
}

.c14:active {
  background-color: #191820;
}

.c19 {
  display: inline-block;
  padding: 4px 8px;
  margin-top: 6px;
  position: relative;
  background-color: #2a303f;
  border-radius: 6px;
  color: #88d1ff;
  font-size: 12px;
  font-weight: 400;
  font-family: Poppins,sans-serif;
}

.c19 svg {
  position: absolute;
  right: 4px;
  top: 2px;
  cursor: pointer;
}

.c19 svg * {
  fill: currentColor;
}

.c20 {
  margin-top: 20px;
  min-width: 150px;
}

.c11 {
  display: none;
  width: 360px;
  padding: 32px 40px;
  position: absolute;
  right: 72px;
  top: -52px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  z-index: 1;
  cursor: pointer;
}

.c11:after {
  content: '';
  display: block;
  position: absolute;
  right: -20px;
  top: 42px;
  width: 0;
  height: 0;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
  border-left: 30px solid #302E3D;
}

.c12 {
  margin-bottom: 16px;
  font-size: 16px;
  font-weight: 500;
}

.c13 {
  color: #9895a6;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
  padding: 24px 40px;
  margin-top: auto;
}

.c26 {
  display: block;
  margin-right: auto;
  color: #9895a6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c26:hover {
  color: #e1dfeb;
}

.c26:active {
  color: #656273;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  font-size: 20px;
  color: #5d5b70;
  cursor: pointer;
}

.c28 svg {
  width: 20px;
  height: 20px;
}

.c28:hover {
  background-color: #47445a;
}

.c28:hover svg * {
  fill: #e1dfeb;
}

.c28:active {
  background-color: #191820;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding: 40px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c23 > strong {
  font-weight: 400;
  color: #9895a6;
  white-space: nowrap;
}

.c23 > span {
  font-weight: 500;
}

.c1 {
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@media screen and (max-width:700px) {
  .c0 {
    border-radius: 0;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c5 {
    width: 32px;
    height: 32px;
  }

  .c5 svg {
    width: 16px;
    height: 16px;
  }
}

@media screen and (max-width:1024px) {
  .c5:first-child {
    grid-column: 3/4;
  }

  .c5:nth-child(3) {
    grid-column: 4/5;
  }
}

@media screen and (max-width:700px) {
  .c5 {
    width: 44px;
    height: 44px;
  }

  .c5 svg {
    width: 20px;
    height: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c3 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px 32px;
    height: 180px;
    padding: 24px 48px;
  }
}

@media screen and (max-width:1180px) {
  .c3 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px;
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c3 {
    grid-template-rows: none;
    grid-template-columns: 56px 250px 32px 32px;
    justify-items: start;
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    gap: 10px;
    height: 100px;
    background-color: #201d2a;
    border-bottom: 1px solid #302E3D;
    border-radius: 0;
  }
}

@media screen and (max-width:834px) {
  .c3 {
    grid-template-columns: 56px 150px 32px 32px;
    border-radius: 0;
  }
}

@media screen and (max-width:700px) {
  .c3 {
    grid-template-columns: 56px 1fr 44px 44px;
    gap: 16px;
    padding: 20px;
  }
}

@media screen and (max-width:375px) {
  .c3 {
    grid-column: 1fr 44px 44px;
  }
}

@media screen and (max-width:1440px) {
  .c4 {
    height: 56px;
    width: 56px;
  }
}

@media screen and (max-width:1024px) {
  .c4 {
    grid-column: 1/2;
    grid-row: 1/2;
  }
}

@media screen and (max-width:375px) {
  .c4 {
    grid-column: none;
    display: none;
  }
}

@media screen and (max-width:1024px) {
  .c6 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    grid-column: 2/3;
    grid-row: 1/2;
    padding-left: 14px;
  }
}

@media screen and (max-width:375px) {
  .c6 {
    grid-column: 1/2;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c6 span {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c21 {
    width: 135px;
    height: 40px;
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c21 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c7 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    grid-column: 1/3;
    grid-row: 2/3;
    border: none;
  }
}

@media screen and (max-width:834px) {
  .c7 {
    gap: 40px;
  }
}

@media screen and (max-width:700px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 20px;
    gap: 0px;
  }
}

@media screen and (max-width:1440px) {
  .c9 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c15 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c14 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }
}

@media screen and (max-width:1024px) {
  .c14 {
    margin-left: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c20 {
    margin: 0 0 0 auto;
  }
}

@media screen and (max-width:700px) {
  .c20 {
    padding-top: 10px;
    margin: 0;
  }
}

@media screen and (max-width:700px) {
  .c11 {
    width: 240px;
    padding: 16px 40px;
  }
}

@media screen and (max-width:1440px) {
  .c25 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    padding: 40px 24px;
  }
}

@media screen and (max-width:1024px) {
  .c25 {
    width: 100%;
    gap: 12px;
    position: absolute;
    bottom: 0;
    left: 0;
    padding: 10px 24px;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:700px) {
  .c25 {
    padding: 24px 20px;
    position: relative;
    background-color: #1a1823;
  }
}

@media screen and (max-width:1440px) {
  .c26 {
    margin: 0 auto;
  }
}

@media screen and (max-width:1024px) {
  .c26 {
    margin: 0;
  }
}

@media screen and (max-width:1440px) {
  .c28 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }

  .c28 svg {
    width: 16px;
    height: 16px;
  }
}

@media screen and (max-width:1024px) {
  .c27 {
    gap: 12px;
  }
}

@media screen and (max-width:1440px) {
  .c22 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c22 {
    grid-column: 2/3;
    grid-row: 1/2;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 40px;
    border-bottom: 1px solid #302E3D;
  }
}

@media screen and (max-width:700px) {
  .c22 {
    display: none;
  }
}

@media screen and (max-width:1024px) {
  .c23 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    gap: 10px;
  }
}

@media screen and (max-width:1024px) {
  .c2 {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: 100px 100px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:834px) {

}

@media screen and (max-width:700px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div
    id="tour-sidebar"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <span />
          <img
            alt=""
            class="c4"
            src="https://picsum.photos/72"
          />
          <a
            class="c5"
          >
            <svg
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.643 10.674l-3.367 3.3a.987.987 0 01-1.4-1.392l1.137-1.129c.259-.257.173-.465-.192-.465H10.3a.984.984 0 110-1.968h4.525c.363 0 .451-.208.192-.466L13.88 7.425a.987.987 0 011.4-1.392l3.359 3.262a.957.957 0 01.004 1.379zM5.365 14.936h1.977a.987.987 0 110 1.974H4.379a1.317 1.317 0 01-1.314-1.316V4.41a1.317 1.317 0 011.314-1.316h2.963a.987.987 0 110 1.974H5.365a.327.327 0 00-.33.328v9.214a.329.329 0 00.33.326z"
                fill="#8d89a3"
                fill-rule="evenodd"
              />
            </svg>
          </a>
          <div
            class="c6"
          >
            <p>
              My Account
            </p>
            <span />
          </div>
        </header>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class=""
            >
              <strong>
                ETH Balance
              </strong>
              <div
                class="c9"
              >
                Loading
                <small>
                   = $16,208.04
                </small>
              </div>
            </div>
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <h5
                  class="c12"
                >
                  ETH Balance
                </h5>
                <p
                  class="c13"
                >
                  This is your connected wallet Ether balance.
                </p>
              </div>
              <button
                class="c14"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <div
              class=""
            >
              <strong>
                wNOM Balance
              </strong>
              <div
                class="c15"
              >
                Loading
                <small>
                   = $16,208.04
                </small>
                <div
                  class="c16"
                >
                  <div
                    class="c17 c18"
                  >
                    Loading
                  </div>
                  <div
                    class="c19"
                  >
                    <span>
                      Loading approved
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <h5
                  class="c12"
                >
                  wNOM Balance
                </h5>
                <p
                  class="c13"
                >
                  This shows your total wNOM balance and the amount approved for selling. You must approve wNOM for selling before it can be sold.
                </p>
              </div>
              <button
                class="c14"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c20"
          >
            <button
              class="c21"
              style="width: 100%;"
            >
              Withdraw wNOM
            </button>
          </div>
        </div>
        <div
          class="c22"
        >
          <div
            class="c23"
          >
            <strong>
              Connection
            </strong>
            <div
              class="c24"
            >
              Loading
            </div>
          </div>
          <div
            class="c23"
          >
            <strong>
              Chain Id
            </strong>
            <span />
          </div>
          <div
            class="c23"
          >
            <strong>
              Block Number
            </strong>
            <span>
              12345678
            </span>
          </div>
        </div>
        <footer
          class="c25"
        >
          <a
            class="c26"
            href="https://onomy.io/"
            target="_blank"
          >
            About Onomy
          </a>
          <div
            class="c27"
          >
            <a
              class="c28"
              href="https://t.me/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.966 11.085L13.195 6.87c1.01-.439 4.435-1.844 4.435-1.844s1.583-.614 1.448.875c-.044.615-.4 2.766-.746 5.093l-1.1 6.893s-.088 1.01-.834 1.185a3.611 3.611 0 01-2.2-.79c-.176-.132-3.293-2.107-4.434-3.073a.832.832 0 01.044-1.4 168.85 168.85 0 004.61-4.39c.527-.527 1.054-1.756-1.141-.263l-6.184 4.168a2.58 2.58 0 01-2.02.044c-1.317-.395-2.854-.922-2.854-.922s-1.054-.659.746-1.361z"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c28"
              href="https://medium.com/onomy-protocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.5"
                >
                  <path
                    d="M11.281 9.979A5.641 5.641 0 115.641 4.3a5.66 5.66 0 015.641 5.679m6.188 0c0 2.952-1.263 5.347-2.82 5.347s-2.82-2.394-2.82-5.347 1.261-5.346 2.818-5.346 2.82 2.394 2.82 5.347m2.531 0c0 2.645-.444 4.79-.992 4.79s-.992-2.145-.992-4.79.445-4.79.993-4.79S20 7.334 20 9.979"
                    fill="#8d89a3"
                  />
                </g>
              </svg>
            </a>
            <a
              class="c28"
              href="https://twitter.com/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.555 6.438v.46a10.4 10.4 0 01-.66 3.6 10.744 10.744 0 01-1.961 3.282 9.729 9.729 0 01-3.2 2.4 10.445 10.445 0 01-4.383.921 10.247 10.247 0 01-2.922-.42 9.937 9.937 0 01-2.6-1.181q.42.041.86.04a7.14 7.14 0 002.381-.4 7.457 7.457 0 002.081-1.121 3.592 3.592 0 01-2.081-.73 3.463 3.463 0 01-1.261-1.771 3.579 3.579 0 00.66.06 3.7 3.7 0 00.941-.12 3.472 3.472 0 01-1.461-.67 3.567 3.567 0 01-1.031-1.261 3.749 3.749 0 01-.39-1.591v-.06a3.369 3.369 0 001.641.46 3.617 3.617 0 01-1.171-1.291 3.517 3.517 0 01-.43-1.711 3.574 3.574 0 01.48-1.8 10.262 10.262 0 007.4 3.762 4.156 4.156 0 01-.08-.82 3.5 3.5 0 01.48-1.8 3.627 3.627 0 011.311-1.311 3.462 3.462 0 011.791-.49 3.563 3.563 0 012.622 1.141 6.994 6.994 0 002.281-.881 3.481 3.481 0 01-.61 1.151 3.694 3.694 0 01-.971.851 7.316 7.316 0 002.081-.58 7.525 7.525 0 01-1.798 1.881z"
                  fill="#8d89a3"
                  opacity="0.5"
                />
              </svg>
            </a>
          </div>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Given the Sidebar component and strongBalance, weakBalance are of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 4px;
  background-color: #201d2a;
  border-radius: 6px;
  box-sizing: border-box;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #c75a5a;
  font-weight: 500;
}

.c24:before {
  content: '';
  display: block;
  width: 12px;
  height: 12px;
  background-color: currentColor;
  border-radius: 50%;
}

.c18 {
  display: none;
  padding: 12px 24px;
  position: absolute;
  bottom: -48px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  color: #e1dfeb;
  font-size: 14px;
  font-family: 'Poppins',sans-serif;
  z-index: 1;
}

.c16 {
  position: relative;
}

.c16:hover .c17 {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 44px;
  width: 44px;
  background-color: #1a1823;
  border: 1px solid #302E3D;
  border-radius: 8px;
  color: #8d89a3;
  cursor: pointer;
}

.c5 svg {
  width: 20px;
  height: 20px;
}

.c5:hover {
  background-color: #252130;
}

.c5:active {
  background-color: #1b1924;
}

.c3 {
  display: grid;
  grid-template-columns: 44px 72px 44px;
  grid-template-rows: auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 32px 60px;
  height: 200px;
  padding: 24px 48px;
  background-color: #1a1823;
  border-radius: 4px;
}

.c4 {
  height: 72px;
  width: 72px;
  border-radius: 12px;
  border: 3px solid #302E3D;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  grid-column: 1/4;
}

.c6 span {
  font-size: 16px;
  font-weight: 500;
  color: #9895a6;
}

.c21 {
  width: 170px;
  height: 50px;
  background-color: #e1dfeb;
  border: none;
  border-radius: 8px;
  color: #1a1823;
  font-weight: 600;
  font-size: 14px;
}

.c21:hover {
  background-color: #fff;
}

.c21:active {
  background-color: #9895a6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 14px;
  padding: 24px 40px;
  border-bottom: 1px solid #302E3D;
}

.c7 strong {
  display: block;
  margin-bottom: 10px;
  font-weight: 400;
  color: #9895a6;
}

.c9 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 400;
}

.c9 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c15 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 700;
}

.c15 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  position: relative;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  border: none;
  font-size: 20px;
  font-weight: 500;
  color: #5d5b70;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  background-color: #8d89a3;
  color: #1a1823;
}

.c14:active {
  background-color: #191820;
}

.c19 {
  display: inline-block;
  padding: 4px 8px;
  margin-top: 6px;
  position: relative;
  background-color: #2a303f;
  border-radius: 6px;
  color: #88d1ff;
  font-size: 12px;
  font-weight: 400;
  font-family: Poppins,sans-serif;
}

.c19 svg {
  position: absolute;
  right: 4px;
  top: 2px;
  cursor: pointer;
}

.c19 svg * {
  fill: currentColor;
}

.c20 {
  margin-top: 20px;
  min-width: 150px;
}

.c11 {
  display: none;
  width: 360px;
  padding: 32px 40px;
  position: absolute;
  right: 72px;
  top: -52px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  z-index: 1;
  cursor: pointer;
}

.c11:after {
  content: '';
  display: block;
  position: absolute;
  right: -20px;
  top: 42px;
  width: 0;
  height: 0;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
  border-left: 30px solid #302E3D;
}

.c12 {
  margin-bottom: 16px;
  font-size: 16px;
  font-weight: 500;
}

.c13 {
  color: #9895a6;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
  padding: 24px 40px;
  margin-top: auto;
}

.c26 {
  display: block;
  margin-right: auto;
  color: #9895a6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c26:hover {
  color: #e1dfeb;
}

.c26:active {
  color: #656273;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  font-size: 20px;
  color: #5d5b70;
  cursor: pointer;
}

.c28 svg {
  width: 20px;
  height: 20px;
}

.c28:hover {
  background-color: #47445a;
}

.c28:hover svg * {
  fill: #e1dfeb;
}

.c28:active {
  background-color: #191820;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding: 40px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c23 > strong {
  font-weight: 400;
  color: #9895a6;
  white-space: nowrap;
}

.c23 > span {
  font-weight: 500;
}

.c1 {
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@media screen and (max-width:700px) {
  .c0 {
    border-radius: 0;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c5 {
    width: 32px;
    height: 32px;
  }

  .c5 svg {
    width: 16px;
    height: 16px;
  }
}

@media screen and (max-width:1024px) {
  .c5:first-child {
    grid-column: 3/4;
  }

  .c5:nth-child(3) {
    grid-column: 4/5;
  }
}

@media screen and (max-width:700px) {
  .c5 {
    width: 44px;
    height: 44px;
  }

  .c5 svg {
    width: 20px;
    height: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c3 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px 32px;
    height: 180px;
    padding: 24px 48px;
  }
}

@media screen and (max-width:1180px) {
  .c3 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px;
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c3 {
    grid-template-rows: none;
    grid-template-columns: 56px 250px 32px 32px;
    justify-items: start;
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    gap: 10px;
    height: 100px;
    background-color: #201d2a;
    border-bottom: 1px solid #302E3D;
    border-radius: 0;
  }
}

@media screen and (max-width:834px) {
  .c3 {
    grid-template-columns: 56px 150px 32px 32px;
    border-radius: 0;
  }
}

@media screen and (max-width:700px) {
  .c3 {
    grid-template-columns: 56px 1fr 44px 44px;
    gap: 16px;
    padding: 20px;
  }
}

@media screen and (max-width:375px) {
  .c3 {
    grid-column: 1fr 44px 44px;
  }
}

@media screen and (max-width:1440px) {
  .c4 {
    height: 56px;
    width: 56px;
  }
}

@media screen and (max-width:1024px) {
  .c4 {
    grid-column: 1/2;
    grid-row: 1/2;
  }
}

@media screen and (max-width:375px) {
  .c4 {
    grid-column: none;
    display: none;
  }
}

@media screen and (max-width:1024px) {
  .c6 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    grid-column: 2/3;
    grid-row: 1/2;
    padding-left: 14px;
  }
}

@media screen and (max-width:375px) {
  .c6 {
    grid-column: 1/2;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c6 span {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c21 {
    width: 135px;
    height: 40px;
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c21 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c7 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    grid-column: 1/3;
    grid-row: 2/3;
    border: none;
  }
}

@media screen and (max-width:834px) {
  .c7 {
    gap: 40px;
  }
}

@media screen and (max-width:700px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 20px;
    gap: 0px;
  }
}

@media screen and (max-width:1440px) {
  .c9 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c15 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c14 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }
}

@media screen and (max-width:1024px) {
  .c14 {
    margin-left: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c20 {
    margin: 0 0 0 auto;
  }
}

@media screen and (max-width:700px) {
  .c20 {
    padding-top: 10px;
    margin: 0;
  }
}

@media screen and (max-width:700px) {
  .c11 {
    width: 240px;
    padding: 16px 40px;
  }
}

@media screen and (max-width:1440px) {
  .c25 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    padding: 40px 24px;
  }
}

@media screen and (max-width:1024px) {
  .c25 {
    width: 100%;
    gap: 12px;
    position: absolute;
    bottom: 0;
    left: 0;
    padding: 10px 24px;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:700px) {
  .c25 {
    padding: 24px 20px;
    position: relative;
    background-color: #1a1823;
  }
}

@media screen and (max-width:1440px) {
  .c26 {
    margin: 0 auto;
  }
}

@media screen and (max-width:1024px) {
  .c26 {
    margin: 0;
  }
}

@media screen and (max-width:1440px) {
  .c28 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }

  .c28 svg {
    width: 16px;
    height: 16px;
  }
}

@media screen and (max-width:1024px) {
  .c27 {
    gap: 12px;
  }
}

@media screen and (max-width:1440px) {
  .c22 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c22 {
    grid-column: 2/3;
    grid-row: 1/2;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 40px;
    border-bottom: 1px solid #302E3D;
  }
}

@media screen and (max-width:700px) {
  .c22 {
    display: none;
  }
}

@media screen and (max-width:1024px) {
  .c23 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    gap: 10px;
  }
}

@media screen and (max-width:1024px) {
  .c2 {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: 100px 100px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:834px) {

}

@media screen and (max-width:700px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div
    id="tour-sidebar"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <span />
          <img
            alt=""
            class="c4"
            src="https://picsum.photos/72"
          />
          <a
            class="c5"
          >
            <svg
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.643 10.674l-3.367 3.3a.987.987 0 01-1.4-1.392l1.137-1.129c.259-.257.173-.465-.192-.465H10.3a.984.984 0 110-1.968h4.525c.363 0 .451-.208.192-.466L13.88 7.425a.987.987 0 011.4-1.392l3.359 3.262a.957.957 0 01.004 1.379zM5.365 14.936h1.977a.987.987 0 110 1.974H4.379a1.317 1.317 0 01-1.314-1.316V4.41a1.317 1.317 0 011.314-1.316h2.963a.987.987 0 110 1.974H5.365a.327.327 0 00-.33.328v9.214a.329.329 0 00.33.326z"
                fill="#8d89a3"
                fill-rule="evenodd"
              />
            </svg>
          </a>
          <div
            class="c6"
          >
            <p>
              My Account
            </p>
            <span />
          </div>
        </header>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class=""
            >
              <strong>
                ETH Balance
              </strong>
              <div
                class="c9"
              >
                0.000000
                <small>
                   = $16,208.04
                </small>
              </div>
            </div>
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <h5
                  class="c12"
                >
                  ETH Balance
                </h5>
                <p
                  class="c13"
                >
                  This is your connected wallet Ether balance.
                </p>
              </div>
              <button
                class="c14"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <div
              class=""
            >
              <strong>
                wNOM Balance
              </strong>
              <div
                class="c15"
              >
                0.000000
                <small>
                   = $16,208.04
                </small>
                <div
                  class="c16"
                >
                  <div
                    class="c17 c18"
                  >
                    Loading
                  </div>
                  <div
                    class="c19"
                  >
                    <span>
                      Loading approved
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <h5
                  class="c12"
                >
                  wNOM Balance
                </h5>
                <p
                  class="c13"
                >
                  This shows your total wNOM balance and the amount approved for selling. You must approve wNOM for selling before it can be sold.
                </p>
              </div>
              <button
                class="c14"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c20"
          >
            <button
              class="c21"
              style="width: 100%;"
            >
              Withdraw wNOM
            </button>
          </div>
        </div>
        <div
          class="c22"
        >
          <div
            class="c23"
          >
            <strong>
              Connection
            </strong>
            <div
              class="c24"
            >
              Loading
            </div>
          </div>
          <div
            class="c23"
          >
            <strong>
              Chain Id
            </strong>
            <span />
          </div>
          <div
            class="c23"
          >
            <strong>
              Block Number
            </strong>
            <span>
              12345678
            </span>
          </div>
        </div>
        <footer
          class="c25"
        >
          <a
            class="c26"
            href="https://onomy.io/"
            target="_blank"
          >
            About Onomy
          </a>
          <div
            class="c27"
          >
            <a
              class="c28"
              href="https://t.me/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.966 11.085L13.195 6.87c1.01-.439 4.435-1.844 4.435-1.844s1.583-.614 1.448.875c-.044.615-.4 2.766-.746 5.093l-1.1 6.893s-.088 1.01-.834 1.185a3.611 3.611 0 01-2.2-.79c-.176-.132-3.293-2.107-4.434-3.073a.832.832 0 01.044-1.4 168.85 168.85 0 004.61-4.39c.527-.527 1.054-1.756-1.141-.263l-6.184 4.168a2.58 2.58 0 01-2.02.044c-1.317-.395-2.854-.922-2.854-.922s-1.054-.659.746-1.361z"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c28"
              href="https://medium.com/onomy-protocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.5"
                >
                  <path
                    d="M11.281 9.979A5.641 5.641 0 115.641 4.3a5.66 5.66 0 015.641 5.679m6.188 0c0 2.952-1.263 5.347-2.82 5.347s-2.82-2.394-2.82-5.347 1.261-5.346 2.818-5.346 2.82 2.394 2.82 5.347m2.531 0c0 2.645-.444 4.79-.992 4.79s-.992-2.145-.992-4.79.445-4.79.993-4.79S20 7.334 20 9.979"
                    fill="#8d89a3"
                  />
                </g>
              </svg>
            </a>
            <a
              class="c28"
              href="https://twitter.com/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.555 6.438v.46a10.4 10.4 0 01-.66 3.6 10.744 10.744 0 01-1.961 3.282 9.729 9.729 0 01-3.2 2.4 10.445 10.445 0 01-4.383.921 10.247 10.247 0 01-2.922-.42 9.937 9.937 0 01-2.6-1.181q.42.041.86.04a7.14 7.14 0 002.381-.4 7.457 7.457 0 002.081-1.121 3.592 3.592 0 01-2.081-.73 3.463 3.463 0 01-1.261-1.771 3.579 3.579 0 00.66.06 3.7 3.7 0 00.941-.12 3.472 3.472 0 01-1.461-.67 3.567 3.567 0 01-1.031-1.261 3.749 3.749 0 01-.39-1.591v-.06a3.369 3.369 0 001.641.46 3.617 3.617 0 01-1.171-1.291 3.517 3.517 0 01-.43-1.711 3.574 3.574 0 01.48-1.8 10.262 10.262 0 007.4 3.762 4.156 4.156 0 01-.08-.82 3.5 3.5 0 01.48-1.8 3.627 3.627 0 011.311-1.311 3.462 3.462 0 011.791-.49 3.563 3.563 0 012.622 1.141 6.994 6.994 0 002.281-.881 3.481 3.481 0 01-.61 1.151 3.694 3.694 0 01-.971.851 7.316 7.316 0 002.081-.58 7.525 7.525 0 01-1.798 1.881z"
                  fill="#8d89a3"
                  opacity="0.5"
                />
              </svg>
            </a>
          </div>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
